Fixed up lastfm alert on mobile

--- a/client/css/app.styl
+++ b/client/css/app.styl
@@ -46,6 +46,7 @@ p
   text-transform: uppercase
   font-size: 14px
   font-weight: bold
+  text-align: center
   text-decoration: none
 
 .button--inactive
@@ -105,11 +106,6 @@ p
   z-index: 500
   // display: none
 
-.alert--lastfm
-  background-image: url("/img/last-fm.png")
-  background-repeat: no-repeat
-  background-position: bottom center
-
 .alert--register
   display: none
 
@@ -121,36 +117,36 @@ p
   height: 100%
 
 .alert__form
-  height: 55px
   display: flex
+  flex-direction: column
   margin-bottom: 10px
   position: relative
+  width: 100%
 
 .alert__input
+  height: 55px
   font-family: 'Helvetica Neue', sans-serif
-  width: 320px
+  width: 100%
   background-color: #fff
   border: 0
-  height: 100%
   padding: 0 20px
   font-size: 16px
   font-weight: bold
   color: #555
   border-radius: 3px
+  margin-bottom: 10px
   &:focus
    outline: 0
   
 .alert__action
-  height: 100%
+  height: 55px
   background: blue
   border: 0
   font-size: 16px
   color: white
   font-weight: bold
   padding: 0 20px
-  display: flex
   border-radius: 3px
-  margin-left: 5px
   &:focus
     outline: 0
 
@@ -261,7 +257,7 @@ p
   position: absolute
   bottom: 0
   width: 100%
-  top: 54px
+  top: 43px
   overflow: hidden
 
 .results__header
@@ -333,6 +329,7 @@ p
 
 .suggestions
   height: 100%
+  padding: 10px
   overflow: hidden
   counter-reset: tally
   transform: translateZ(0)
@@ -557,6 +554,11 @@ p
 @import success
 
 @media only screen and (min-width: 768px)
+
+  .alert--lastfm
+    background-image: url("/img/last-fm.png")
+    background-repeat: no-repeat
+    background-position: bottom center
 
   .logo:before
     content: 'Hipcharts'
